Finalize the order of EDA notebook

--- a/notebooks/03_text_analysis/t-sne-text-data.ipynb
+++ b/notebooks/03_text_analysis/t-sne-text-data.ipynb
@@ -254,7 +254,7 @@
     "fasttext_model.build_vocab(corpus_iterable=tokenized_corpus)\n",
     "fasttext_model.train(corpus_iterable=tokenized_corpus, total_examples=len(tokenized_corpus), epochs=20)\n",
     "\n",
-    "fasttext_model.save(\"../fast-text-custom-model-full-climate-text/cc.uk.64.full.climate.text.custom.bin\""
+    "fasttext_model.save(\"topic-modeling-results/fast-text-custom-model-full-climate-text/cc.uk.64.full.climate.text.custom.bin\")"
    ]
   },
   {
