Validate changepoint detection and text analysis notebooks

--- a/notebooks/02_changepoint_detection/changepoints-consistency.ipynb
+++ b/notebooks/02_changepoint_detection/changepoints-consistency.ipynb
@@ -7,24 +7,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a6655f80-55ca-447d-8c96-8032e428d915",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reactions_score_consistent_changepoints = pd.read_excel(\"reactions_score_consistent_changepoints.xlsx\")\n",
-    "pct_change_consistent_changepoints = pd.read_excel(\"pct_change_consistent_changepoints.xlsx\")\n",
-    "log_transformed_pct_change_consistent_changepoints = pd.read_excel(\"log_transformed_pct_change_reactions_score_consistent_changepoints.xlsx\")"
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.chdir('../../')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "a6655f80-55ca-447d-8c96-8032e428d915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reactions_score_consistent_changepoints = pd.read_excel(\"results/identified_changepoints/reactions_score_consistent_changepoints.xlsx\")\n",
+    "pct_change_consistent_changepoints = pd.read_excel(\"results/identified_changepoints/pct_change_consistent_changepoints.xlsx\")\n",
+    "log_transformed_pct_change_consistent_changepoints = pd.read_excel(\"results/identified_changepoints/log_transformed_pct_change_reactions_score_consistent_changepoints.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "30095dd4-53b1-44b2-af69-eb42f0ac9814",
    "metadata": {},
    "outputs": [],
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c9aedaab-545a-41df-b804-c712a675b35d",
    "metadata": {},
    "outputs": [],
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c27da450-a006-46a9-8c33-8d8469809866",
    "metadata": {},
    "outputs": [
@@ -148,7 +151,7 @@
        "  'Log Transformed Percentage Change']}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "465898d1-07ac-44ba-9f8a-b7bb66f86248",
    "metadata": {},
    "outputs": [
@@ -169,7 +172,7 @@
        "25"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c53e93aa-675b-4ab4-9e4f-a15c914588a4",
    "metadata": {},
    "outputs": [],
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b9aa73aa-6768-4c24-b61d-da09cadf5dda",
    "metadata": {},
    "outputs": [
@@ -467,7 +470,7 @@
        "24                               True  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "60a17bc1-97c1-47eb-ae6c-be3323fa1b43",
    "metadata": {},
    "outputs": [
@@ -719,7 +722,7 @@
        "24  reactions_score  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8fbef55d-5b9f-494e-9adf-9fde0e4ef6a2",
    "metadata": {},
    "outputs": [
@@ -748,7 +751,7 @@
        " Timestamp('2024-08-18 15:52:58')}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a111bfa7-381a-443a-b960-662f2097af32",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1003,7 @@
        "17  reactions_score  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b34f275a-b90b-4a50-92b3-1a8a2c891f4e",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4213a1fe-96b2-4f71-b32f-c9439addf219",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "83366926-57e4-462d-a5b0-a76327df2569",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "816ec945-6d9f-4d7d-9fe7-70164dc1fff8",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "49664270-c94d-4335-8062-c4bf4ea7bc69",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e66922d1-fa26-4e35-bcec-30b08e67f544",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1336,7 @@
        "17  reactions_score               0.00000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
